--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
+
+.header {
+  grid-area: header;
+  background: aquamarine;
+}
+
+.footer {
+  grid-area: footer;
+  background: coral;
+}
+
+.menu {
   text-align: center;
+  grid-area: menu;
+  background: lightblue;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content {
+  grid-area: content;
+  background: blanchedalmond;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.app-wrapper{
+  display: grid;
+  grid-template-areas: "header header "
+  "menu content "
+  "footer footer ";
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 100px 1fr 100px;
 
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 600px) {
+  .app-wrapper{
+    grid-template-areas: "header"
+    "menu"
+    "content"
+    "footer";
+    grid-template-columns: 100%;
+    grid-template-rows: 100px 50px 1fr 100px;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*.App-logo {*/
+/*  height: 40vmin;*/
+/*  pointer-events: none;*/
+/*}*/
+
+/*@media (prefers-reduced-motion: no-preference) {*/
+/*  .App-logo {*/
+/*    animation: App-logo-spin infinite 20s linear;*/
+/*  }*/
+/*}*/
+
+/*.App-header {*/
+/*  background-color: #282c34;*/
+/*  min-height: 100vh;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*  font-size: calc(10px + 2vmin);*/
+/*  color: white;*/
+/*}*/
+
+/*.App-link {*/
+/*  color: #61dafb;*/
+/*}*/
+
+/*@keyframes App-logo-spin {*/
+/*  from {*/
+/*    transform: rotate(0deg);*/
+/*  }*/
+/*  to {*/
+/*    transform: rotate(360deg);*/
+/*  }*/
+/*}*/
