--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,18 @@
-.app-wrapper{
-  display: grid;
-  grid-template-areas: "header header "
-  "menu content "
-  "footer footer ";
-  grid-template-columns: 200px 1fr;
-  grid-template-rows: 100px 1fr 100px;
+.app-wrapper {
+    display: grid;
+    grid-template-areas: "header header " "menu content " "footer footer ";
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 100px 1fr 100px;
 
-  min-height: 100vh;
+    min-height: 100vh;
 }
 
 @media screen and (max-width: 600px) {
-  .app-wrapper{
-    grid-template-areas: "header"
-    "menu"
-    "content"
-    "footer";
-    grid-template-columns: 100%;
-    grid-template-rows: 100px 50px 1fr 100px;
-  }
+    .app-wrapper {
+        grid-template-areas: "header" "menu" "content" "footer";
+        grid-template-columns: 100%;
+        grid-template-rows: 100px 50px 1fr 100px;
+    }
 }
 
 /*.App-logo {*/
