--- a/src/components/profile/createNewPost/Textarea.module.css
+++ b/src/components/profile/createNewPost/Textarea.module.css
@@ -6,42 +6,42 @@
     outline: none;
 
     display: inline-block;
-padding: 6px 14px 6px;
-margin-bottom: 0;
-font-family: Arial, sans-serif;
-font-size: 14px;
-line-height: 20px;
-color: #FFFFFF;
-text-align: center;
-text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-text-decoration: none;
-vertical-align: middle;
-cursor: pointer;
-background-color: #0077C8;
-background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.05) 95%);
-background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.05) 95%);
-background-image: -ms-linear-gradient(rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.05) 95%);
-background-repeat: repeat-x;
-border: 0;
--webkit-border-radius: 3px;
--moz-border-radius: 3px;
-border-radius: 3px;
--webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.2);
--moz-box-shadow: inset 0 -2px 0 rgba(0,0,0,.2);
-box-shadow: inset 0 -2px 0 rgba(0,0,0,.2);
--webkit-transition: 0.1s;
--moz-transition: 0.1s;
-transition: 0.1s;
--webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
--moz-box-sizing: border-box;    /* Firefox, other Gecko */
-box-sizing: border-box;         /* Opera/IE 8+ */
+    padding: 6px 14px 6px;
+    margin-bottom: 0;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    background-color: #0077C8;
+    background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.05) 95%);
+    background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.05) 95%);
+    background-image: -ms-linear-gradient(rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.05) 95%);
+    background-repeat: repeat-x;
+    border: 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0 -2px 0 rgba(0, 0, 0, .2);
+    -moz-box-shadow: inset 0 -2px 0 rgba(0, 0, 0, .2);
+    box-shadow: inset 0 -2px 0 rgba(0, 0, 0, .2);
+    -webkit-transition: 0.1s;
+    -moz-transition: 0.1s;
+    transition: 0.1s;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box; /* Opera/IE 8+ */
 }
 
 .btn:hover {
     background-color: #0098ff;
-    -webkit-box-shadow: inset 0 -4px 0 rgba(0,0,0,.2);
-    -moz-box-shadow: inset 0 -4px 0 rgba(0,0,0,.2);
-    box-shadow: inset 0 -4px 0 rgba(0,0,0,.2);
+    -webkit-box-shadow: inset 0 -4px 0 rgba(0, 0, 0, .2);
+    -moz-box-shadow: inset 0 -4px 0 rgba(0, 0, 0, .2);
+    box-shadow: inset 0 -4px 0 rgba(0, 0, 0, .2);
     margin-top: -2px;
     padding: 6px 14px 8px;
 }
@@ -54,11 +54,35 @@ box-sizing: border-box;         /* Opera/IE 8+ */
     padding: 6px 14px 4px;
 }
 
-body .btn-gray { color:#000000; background-color: #F5F5F5; }
-body .btn-gray:hover { background-color:#DDDDDD; }
-body .btn-dkblue { background-color: #054375; }
-body .btn-dkblue:hover { background-color:#0066b8; }
-body .btn-ltblue { background-color: #00a4d8; }
-body .btn-ltblue:hover { background-color:#01c2ff; }
-body .btn-black { background-color: #222222; }
-body .btn-black:hover { background-color:#444444; }
+body .btn-gray {
+    color: #000000;
+    background-color: #F5F5F5;
+}
+
+body .btn-gray:hover {
+    background-color: #DDDDDD;
+}
+
+body .btn-dkblue {
+    background-color: #054375;
+}
+
+body .btn-dkblue:hover {
+    background-color: #0066b8;
+}
+
+body .btn-ltblue {
+    background-color: #00a4d8;
+}
+
+body .btn-ltblue:hover {
+    background-color: #01c2ff;
+}
+
+body .btn-black {
+    background-color: #222222;
+}
+
+body .btn-black:hover {
+    background-color: #444444;
+}
