--- a/src/components/profile/profileAvatar/ProfileAvatar.module.css
+++ b/src/components/profile/profileAvatar/ProfileAvatar.module.css
@@ -2,7 +2,10 @@
 /*    height: 80px;*/
 /*    width: 80px;*/
 /*}*/
-
+.avatarLarge{
+    padding: 10px;
+    width: 100px;
+}
 
 .avatar {
     margin-left: 10px;
